--- a/app/src/main/res/layout/fragment_book_view_pager.xml
+++ b/app/src/main/res/layout/fragment_book_view_pager.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".BookViewPagerFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <!-- TODO: Update blank fragment layout -->
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
